# beeApi

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECT_SUMMARY.md  README.md  docker-compose.yml
.github/: PR_DESCRIPTION.md  UI_DESCRIPTION.md  pull_request_template.md  ui-preview.html
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  environment.yml  main.py  pyproject.toml  requirements.txt  test_api.py
backend/config/: __init__.py  firebase_config.py
backend/controllers/: __init__.py  bee_controller.py  user_controller.py
backend/docs/: API_V2.md  FIREBASE_SETUP.md  MIGRATION_GUIDE.md  POETRY_CHEATSHEET.md  POETRY_EXAMPLES.md  POETRY_GUIDE.md  POETRY_SETUP.md  README.md
backend/middleware/: __init__.py  auth.py
backend/models/: __init__.py  bee_models.py  user_models.py
docs/: API.md  OVERVIEW.md  README.md  TESTING.md
docs/architecture/: DATABASE_ARCHITECTURE.md  README.md
docs/changelogs/: README.md
docs/guides/: QUICKSTART.md  QUICK_REFERENCE.md  README.md  example_client.py
docs/summaries/: GITHUB_ACTIONS_UPDATE.md  PIP_CLEANUP_COMPLETE.md  POETRY_MIGRATION.md  README.md  REFACTORING_COMPLETE.md  UPDATE_SUMMARY.md
firmware/: README.md  pyproject.toml  simulator.py
firmware/docs/: POETRY_GUIDE.md
gateway/: README.md
postgres/: init.sql
scripts/: dev.sh  run_local.sh  test_integration.py  validate_structure.sh
telemetry/: .dockerignore  Dockerfile  README.md  consumer.py  pyproject.toml
telemetry/docs/: POETRY_GUIDE.md
timeseries/: README.md  init.sql
web/: README.md  package.json
web/public/: index.html
web/src/: App.css  App.js
web/src/components/: HiveList.css  HiveList.js  (+2 more)
