[tool.poetry]
name = "beeapi-firmware"
version = "1.0.0" 
description = "BeeAPI IoT Device Firmware Simulator"
authors = ["Iuri Soares <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9,<3.14"
paho-mqtt = "1.6.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"