[tool.poetry]
name = "beeapi-telemetry"
version = "1.0.0"
description = "BeeAPI MQTT Telemetry Consumer Service"
authors = ["Iuri Soares <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9,<3.14"
paho-mqtt = "1.6.1"
asyncpg = "0.29.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"